style(legal): fix spacing

--- a/src/app/(pages)/legal/page.module.scss
+++ b/src/app/(pages)/legal/page.module.scss
@@ -3,7 +3,7 @@
 		margin-bottom: var(--lg);
 	}
 	h3 {
-		margin-top: var(--2xl);
+		margin-top: var(--xl);
 		margin-bottom: var(--lg);
 	}
 	p:not(:last-child) {
